[package]
name = "array-ranges"
version = "0.1.0"
edition = "2024"
authors = [
    "Mearkatz <drquinsey@gmail.com>",
]
description = ""

[lints.rust]
unsafe_code = { level = "deny", priority = -1 }

[lints.clippy]
enum_glob_use = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -3 }
nursery = { level = "deny", priority = -4 }
unwrap_used = { level = "deny", priority = -5 }
expect_used = { level = "deny", priority = -6 }

[dependencies]
concat-arrays = "0.1.2"
